added jQuery and js to html script element.  added onclick for city search button in script.js

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="col-12 pt-2 m-2">
                     <label for="citySearch" class="ml-1 font-weight-bold">Search for a City:</label><br/>
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" aria-label="Search for a City" aria-describedby="basic-addon2">
+                        <input type="text" class="form-control" id="citySearch" aria-label="Search for a City" aria-describedby="basic-addon2">
                         <div class="input-group-append">
-                          <button class="btn btn-outline-secondary bg-primary text-ligth" type="button"><i class="fas fa-search bg-primary text-light"></i></button>
+                          <button id="searchBtn" class="btn btn-outline-secondary bg-primary text-light" type="button"><i class="fas fa-search bg-primary text-light"></i></button>
                         </div>
                     </div>
                     <!-- <label for="citySearch" class="ml-1 font-weight-bold">Search for a City:</label><br/>
@@ -98,5 +98,8 @@
         </div>                       
     </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="script.js"></script>
+
 </body>
 </html>
