return current weather data and display on page

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <div class="col-md-9 width: 100%">
             <div class="row border ml-2">
                 <div class="col-12">
-                    <h2>Columbus</h2>
-                    <p>Temperature:</p>
-                    <p>Humidity:</p>
-                    <p>Wind Speed</p>
-                    <p>UV Index:</p>
+                    <h2 id="cityHeader"><img id="conditions"/></h2>
+                    <p id="temperature"></p>
+                    <p id="humidity"></p>
+                    <p id="windSpeed"></p>
+                    <p id="uvIndex"></p>
                 </div>
             </div>
             <div class="row mt-2 p-1">
