began call to API to get 5 day forecase

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="row">
                 <div class="col-12 pb-2 float-left">
-                    <button type="button" class="btn btn-outline-secondary w-100 mr-1">Columbus</button>                    
+                    <button type="button" class="btn btn-outline-secondary w-100 mr-1"></button>                    
                 </div>                   
             </div>
         </div>
@@ -55,42 +55,42 @@
                     <h2>5-Day Forecast:</h2>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                          <p class="card-text">weather info</p>
-                          <a href="#" class="card-link">Card link</a>                          
+                          <h5 class="card-title" id="#date1"></h5>
+                          <img id="conditions1"/>
+                          <p class="card-text" id="temperature1"></p>
+                          <p class="card-text" id="humidity1"></p>                                                  
                         </div>
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                          <p class="card-text">weather info</p>
-                          <a href="#" class="card-link">Card link</a>                          
+                          <h5 class="card-title" id="#date2"></h5>
+                          <img id="conditions2"/>
+                          <p class="card-text" id="temperature2"></p>
+                          <p class="card-text" id="humidity2"></p>                                                  
                         </div>
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                          <p class="card-text">weather info</p>
-                          <a href="#" class="card-link">Card link</a>                          
+                          <h5 class="card-title" id="#date3"></h5>
+                          <img id="conditions3"/>
+                          <p class="card-text" id="temperature3"></p>
+                          <p class="card-text" id="humidity3"></p>                                                  
                         </div>
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                          <p class="card-text">weather info</p>
-                          <a href="#" class="card-link">Card link</a>                          
+                          <h5 class="card-title" id="#date4"></h5>
+                          <img id="conditions4"/>
+                          <p class="card-text" id="temperature4"></p>
+                          <p class="card-text" id="humidity4"></p>                                                  
                         </div>
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                          <p class="card-text">weather info</p>
-                          <a href="#" class="card-link">Card link</a>                          
+                          <h5 class="card-title" id="#date5"></h5>
+                          <img id="conditions5"/>
+                          <p class="card-text" id="temperature5"></p>
+                          <p class="card-text" id="humidity5"></p>                                                  
                         </div>
                     </div>                    
                 </div>
