--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h2>5-Day Forecast:</h2>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title" id="#date1"></h5>
+                          <h6 class="card-title" id="date1"></h6>
                           <img id="conditions1"/>
                           <p class="card-text" id="temperature1"></p>
                           <p class="card-text" id="humidity1"></p>                                                  
@@ -63,7 +63,7 @@
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title" id="#date2"></h5>
+                          <h6 class="card-title" id="date2"></h6>
                           <img id="conditions2"/>
                           <p class="card-text" id="temperature2"></p>
                           <p class="card-text" id="humidity2"></p>                                                  
@@ -71,7 +71,7 @@
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title" id="#date3"></h5>
+                          <h6 class="card-title" id="date3"></h6>
                           <img id="conditions3"/>
                           <p class="card-text" id="temperature3"></p>
                           <p class="card-text" id="humidity3"></p>                                                  
@@ -79,7 +79,7 @@
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title" id="#date4"></h5>
+                          <h6 class="card-title" id="date4"></h6>
                           <img id="conditions4"/>
                           <p class="card-text" id="temperature4"></p>
                           <p class="card-text" id="humidity4"></p>                                                  
@@ -87,7 +87,7 @@
                     </div>
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
-                          <h5 class="card-title" id="#date5"></h5>
+                          <h6 class="card-title" id="date5"></h6>
                           <img id="conditions5"/>
                           <p class="card-text" id="temperature5"></p>
                           <p class="card-text" id="humidity5"></p>                                                  
