added save and pull from local storage.  had to refactor the functions to allow the saved cities to also pull from the APIs

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 pb-2 float-left">
-                    <button type="button" class="btn btn-outline-secondary w-100 mr-1"></button>                    
+                <div class="col-12 pb-2 float-left" id="searchHistory">
+                    <!-- <button type="button" class="btn btn-outline-secondary w-100 mr-1"></button> -->
                 </div>                   
             </div>
         </div>
