added weather conditions icon to current conditions display

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="col-md-9 width: 100%">
             <div class="row border ml-2">
                 <div class="col-12">
-                    <h2 id="cityHeader"><img id="conditions"/></h2>
+                    <h2 id="cityHeader" style="display: inline-block"></h2>
+                    <img id="conditions"/>
                     <p id="temperature"></p>
                     <p id="humidity"></p>
                     <p id="windSpeed"></p>
