updated sizing of weather condition icons for current conditions and 5 day forecast

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="row border ml-2">
                 <div class="col-12">
                     <h2 id="cityHeader" style="display: inline-block"></h2>
-                    <img id="conditions"/>
+                    <img id="conditions" style="height: 60px"/>
                     <p id="temperature"></p>
                     <p id="humidity"></p>
                     <p id="windSpeed"></p>
@@ -51,7 +51,7 @@
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
                           <h6 class="card-title" id="date1"></h6>
-                          <img id="conditions1"/>
+                          <img id="conditions1" style="height: 80px"/>
                           <p class="card-text" id="temperature1"></p>
                           <p class="card-text" id="humidity1"></p>                                                  
                         </div>
@@ -59,7 +59,7 @@
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
                           <h6 class="card-title" id="date2"></h6>
-                          <img id="conditions2"/>
+                          <img id="conditions2"style="height: 80px"/>
                           <p class="card-text" id="temperature2"></p>
                           <p class="card-text" id="humidity2"></p>                                                  
                         </div>
@@ -67,7 +67,7 @@
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
                           <h6 class="card-title" id="date3"></h6>
-                          <img id="conditions3"/>
+                          <img id="conditions3" style="height: 80px"/>
                           <p class="card-text" id="temperature3"></p>
                           <p class="card-text" id="humidity3"></p>                                                  
                         </div>
@@ -75,7 +75,7 @@
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
                           <h6 class="card-title" id="date4"></h6>
-                          <img id="conditions4"/>
+                          <img id="conditions4" style="height: 80px"/>
                           <p class="card-text" id="temperature4"></p>
                           <p class="card-text" id="humidity4"></p>                                                  
                         </div>
@@ -83,7 +83,7 @@
                     <div class="card mr-3 mt-3 float-left rounded bg-primary text-light" style="width: 8rem;">
                         <div class="card-body">
                           <h6 class="card-title" id="date5"></h6>
-                          <img id="conditions5"/>
+                          <img id="conditions5" style="height: 80px"/>
                           <p class="card-text" id="temperature5"></p>
                           <p class="card-text" id="humidity5"></p>                                                  
                         </div>
